--- a/arithmetic_practice/index.html
+++ b/arithmetic_practice/index.html
@@ -16,22 +16,15 @@
             margin: 0;
             overflow: hidden;
         }
-        #controls, #info {
+        #controls {
             position: absolute;
             top: 20px;
+            left: 20px;
             background: #fff;
             padding: 15px;
             border-radius: 10px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
             font-size: 16px;
-        }
-        #controls {
-            left: 20px;
-        }
-        #info {
-            right: 20px;
-            text-align: right;
-            width: 200px;
         }
         #controls label {
             display: block;
@@ -48,6 +41,21 @@
         }
         #controls input[type=checkbox], #controls input[type=button] {
             width: auto;
+        }
+        #info {
+            position: absolute;
+            top: 20px;
+            right: 20px;
+            text-align: right;
+            background: #fff;
+            padding: 15px;
+            border-radius: 10px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            width: 200px;
+            font-size: 16px;
+        }
+        #info div {
+            margin-bottom: 10px;
         }
         #progress-container {
             position: absolute;
@@ -82,10 +90,10 @@
             font-size: 48px;
             color: #333;
             transition: background-color 0.2s;
-            background-color: #ddd;
+            background-color: #ddd; /* Grey shade before start */
             padding: 20px;
             border-radius: 10px;
-            width: 600px;
+            width: 600px; /* Fixed width for consistency */
             font-family: 'Courier New', monospace;
         }
         #question-area.started {
@@ -102,16 +110,48 @@
             margin-bottom: 20px;
             font-family: 'Courier New', monospace;
         }
-        #answer::-webkit-outer-spin-button, #answer::-webkit-inner-spin-button {
+        #answer::-webkit-outer-spin-button,
+        #answer::-webkit-inner-spin-button,
+        #addMin1::-webkit-outer-spin-button,
+        #addMin1::-webkit-inner-spin-button,
+        #addMax1::-webkit-outer-spin-button,
+        #addMax1::-webkit-inner-spin-button,
+        #addMin2::-webkit-outer-spin-button,
+        #addMin2::-webkit-inner-spin-button,
+        #addMax2::-webkit-outer-spin-button,
+        #addMax2::-webkit-inner-spin-button,
+        #subMin1::-webkit-outer-spin-button,
+        #subMin1::-webkit-inner-spin-button,
+        #subMax1::-webkit-outer-spin-button,
+        #subMax1::-webkit-inner-spin-button,
+        #subMin2::-webkit-outer-spin-button,
+        #subMin2::-webkit-inner-spin-button,
+        #subMax2::-webkit-outer-spin-button,
+        #subMax2::-webkit-inner-spin-button,
+        #mulMin1::-webkit-outer-spin-button,
+        #mulMin1::-webkit-inner-spin-button,
+        #mulMax1::-webkit-outer-spin-button,
+        #mulMax1::-webkit-inner-spin-button,
+        #mulMin2::-webkit-outer-spin-button,
+        #mulMin2::-webkit-inner-spin-button,
+        #mulMax2::-webkit-outer-spin-button,
+        #mulMax2::-webkit-inner-spin-button,
+        #divMin1::-webkit-outer-spin-button,
+        #divMin1::-webkit-inner-spin-button,
+        #divMax1::-webkit-outer-spin-button,
+        #divMax1::-webkit-inner-spin-button,
+        #divMin2::-webkit-outer-spin-button,
+        #divMin2::-webkit-inner-spin-button,
+        #divMax2::-webkit-outer-spin-button,
+        #divMax2::-webkit-inner-spin-button {
             -webkit-appearance: none;
             margin: 0;
         }
-        #answer[type=number] {
+        #answer[type=number], #addMin1[type=number], #addMax1[type=number], #addMin2[type=number], #addMax2[type=number], #subMin1[type=number], #subMax1[type=number], #subMin2[type=number], #subMax2[type=number], #mulMin1[type=number], #mulMax1[type=number], #mulMin2[type=number], #mulMax2[type=number], #divMin1[type=number], #divMax1[type=number], #divMin2[type=number], #divMax2[type=number] {
             -moz-appearance: textfield;
         }
-        .question {
-            white-space: pre;
-            letter-spacing: -5px;
+        #upcoming-questions {
+            margin-top: 0;
         }
         .upcoming-question {
             opacity: 0.6;
@@ -123,6 +163,10 @@
         }
         .upcoming-question:nth-child(3) {
             opacity: 0.2;
+        }
+        .question {
+            white-space: pre;
+            letter-spacing: -5px; /* Reduce spacing between characters */
         }
         .history-row:nth-child(odd) {
             background-color: #f4f4f4;
@@ -143,7 +187,6 @@
             <select id="timeSelect">
                 <option value="60">60s</option>
                 <option value="120">120s</option>
-                <option value="unlimited">Unlimited</option>
             </select>
         </label>
         <label>
@@ -195,10 +238,18 @@
         <div id="question" class="question"></div>
         <div id="upcoming-questions"></div>
     </div>
+
     <audio id="click-sound" src="res/sound.wav"></audio>
+
     <script>
-        let correctAnswer, score = 0, total = 0, timer, timerStarted = false, soundEnabled = false;
-        const upcomingQuestions = [], cpmHistory = [];
+        let correctAnswer;
+        let score = 0;
+        let total = 0;
+        let timer;
+        let timerStarted = false;
+        let soundEnabled = false;
+        const upcomingQuestions = [];
+        const cpmHistory = [];
 
         function getRandomInt(min, max) {
             return Math.floor(Math.random() * (max - min + 1)) + min;
@@ -213,33 +264,77 @@
             if (document.getElementById('squares').checked) operations.push('^2');
             const operation = operations[Math.floor(Math.random() * operations.length)];
 
-            const generateValues = (id1, id2) => [getRandomInt(parseInt(document.getElementById(id1).value) || 2, parseInt(document.getElementById(id2).value) || 9)];
-            const [a, b] = generateValues('addMin1', 'addMax1').concat(generateValues('addMin2', 'addMax2'));
-            
             switch (operation) {
-                case '+': return { question: `${a} + ${b}`, answer: a + b };
-                case '-': return { question: `${a} - ${b}`, answer: a - b };
-                case '*': return { question: `${a} * ${b}`, answer: a * b };
-                case '/': return { question: `${a * b} / ${b}`, answer: a };
-                case '^2': return { question: `${a}^2`, answer: a * a };
+                case '+':
+                    const addMin1 = parseInt(document.getElementById('addMin1').value) || 2;
+                    const addMax1 = parseInt(document.getElementById('addMax1').value) || 9;
+                    const addMin2 = parseInt(document.getElementById('addMin2').value) || 2;
+                    const addMax2 = parseInt(document.getElementById('addMax2').value) || 9;
+                    const aAdd = getRandomInt(addMin1, addMax1);
+                    const bAdd = getRandomInt(addMin2, addMax2);
+                    return { question: `${aAdd} + ${bAdd}`, answer: aAdd + bAdd };
+                case '-':
+                    const subMin1 = parseInt(document.getElementById('subMin1').value) || 2;
+                    const subMax1 = parseInt(document.getElementById('subMax1').value) || 9;
+                    const subMin2 = parseInt(document.getElementById('subMin2').value) || 2;
+                    const subMax2 = parseInt(document.getElementById('subMax2').value) || 9;
+                    const aSub = getRandomInt(subMin1, subMax1);
+                    const bSub = getRandomInt(subMin2, subMax2);
+                    return { question: `${aSub} - ${bSub}`, answer: aSub - bSub };
+                case '*':
+                    const mulMin1 = parseInt(document.getElementById('mulMin1').value) || 2;
+                    const mulMax1 = parseInt(document.getElementById('mulMax1').value) || 9;
+                    const mulMin2 = parseInt(document.getElementById('mulMin2').value) || 2;
+                    const mulMax2 = parseInt(document.getElementById('mulMax2').value) || 9;
+                    const aMul = getRandomInt(mulMin1, mulMax1);
+                    const bMul = getRandomInt(mulMin2, mulMax2);
+                    return { question: `${aMul} * ${bMul}`, answer: aMul * bMul };
+                case '/':
+                    const divMin1 = parseInt(document.getElementById('divMin1').value) || 2;
+                    const divMax1 = parseInt(document.getElementById('divMax1').value) || 9;
+                    const divMin2 = parseInt(document.getElementById('divMin2').value) || 2;
+                    const divMax2 = parseInt(document.getElementById('divMax2').value) || 9;
+                    const aDiv = getRandomInt(divMin1, divMax1);
+                    const bDiv = getRandomInt(divMin2, divMax2);
+                    const numerator = aDiv * bDiv; // Ensure the numerator is a multiple of bDiv
+                    return { question: `${numerator} / ${bDiv}`, answer: numerator / bDiv };
+                case '^2':
+                    const squaresMin = parseInt(document.getElementById('squaresMin').value) || 2;
+                    const squaresMax = parseInt(document.getElementById('squaresMax').value) || 9;
+                    const aSquare = getRandomInt(squaresMin, squaresMax);
+                    return { question: `${aSquare}^2`, answer: aSquare * aSquare };
             }
         }
 
         function updateUpcomingQuestions() {
-            document.getElementById('upcoming-questions').innerHTML = upcomingQuestions.slice(1).map(q => `<div class="upcoming-question question">${q.question}</div>`).join('');
+            const upcomingQuestionsDiv = document.getElementById('upcoming-questions');
+            upcomingQuestionsDiv.innerHTML = '';
+            for (let i = 1; i < upcomingQuestions.length; i++) {
+                const questionDiv = document.createElement('div');
+                questionDiv.className = 'upcoming-question question';
+                questionDiv.innerText = upcomingQuestions[i].question;
+                upcomingQuestionsDiv.appendChild(questionDiv);
+            }
         }
 
         function checkAnswer() {
-            if (parseInt(document.getElementById('answer').value) === correctAnswer) {
-                if (soundEnabled) playClickSound();
-                score++; total++;
+            const answer = parseInt(document.getElementById('answer').value);
+            if (answer === correctAnswer) {
+                if (soundEnabled) {
+                    playClickSound();
+                }
+                score++;
+                total++;
                 upcomingQuestions.shift();
-                upcomingQuestions.push(generateQuestion());
+                const nextQuestion = generateQuestion();
+                upcomingQuestions.push(nextQuestion);
                 correctAnswer = upcomingQuestions[0].answer;
                 document.getElementById('question').innerText = upcomingQuestions[0].question;
                 document.getElementById('answer').value = '';
                 updateUpcomingQuestions();
-                if (!timerStarted) startTimer();
+                if (!timerStarted) {
+                    startTimer();
+                }
             }
         }
 
@@ -256,37 +351,58 @@
 
         function startTimer() {
             timerStarted = true;
-            score = 0; total = 0;
-            const timeLimit = document.getElementById('timeSelect').value;
+            score = 0;
+            total = 0;
+            const timeLimit = parseInt(document.getElementById('timeSelect').value);
             document.getElementById('cpm-display').innerText = `CPM: 0`;
             document.getElementById('question-area').classList.add('started');
-            document.getElementById('progress-bar').style.width = '100%';
 
-            if (timeLimit === 'unlimited') return;
+            const progressBar = document.getElementById('progress-bar');
+            progressBar.style.width = '100%';
 
-            const interval = timeLimit * 1000, decrement = 100 / timeLimit;
+            const interval = timeLimit * 1000; // Total time in milliseconds
+            const decrement = 100 / timeLimit; // Percentage decrement per second
+
             timer = setInterval(() => {
                 const currentTime = parseInt(document.querySelector('#progress-bar').style.width.replace('%', ''));
                 if (currentTime > 0) {
-                    document.getElementById('progress-bar').style.width = `${currentTime - decrement}%`;
+                    progressBar.style.width = `${currentTime - decrement}%`;
                     let cpm = Math.floor((score / (timeLimit - (currentTime / decrement))) * 60);
-                    document.getElementById('cpm-display').innerText = `CPM: ${isNaN(cpm) || !isFinite(cpm) ? 0 : cpm}`;
+                    if (isNaN(cpm) || !isFinite(cpm)) {
+                        cpm = 0;
+                    }
+                    document.getElementById('cpm-display').innerText = `CPM: ${cpm}`;
                 } else {
                     clearInterval(timer);
-                    const cpm = Math.floor((score / timeLimit) * 60);
-                    cpmHistory.push(isNaN(cpm) || !isFinite(cpm) ? 0 : cpm);
+                    let cpm = Math.floor((score / timeLimit) * 60);
+                    if (isNaN(cpm) || !isFinite(cpm)) {
+                        cpm = 0;
+                    }
+                    cpmHistory.push(cpm);
                     updateCpmHistory();
-                    setTimeout(initializePractice, 500);
+                    setTimeout(() => {
+                        initializePractice();
+                    }, 500); // Pause for 0.5 seconds before restarting
                 }
             }, 1000);
         }
 
         function updateCpmHistory() {
-            document.getElementById('cpm-history').innerHTML = cpmHistory.map(cpm => `<div class="history-row">${cpm}</div>`).join('');
+            const cpmHistoryDiv = document.getElementById('cpm-history');
+            cpmHistoryDiv.innerHTML = '';
+            cpmHistory.forEach(cpm => {
+                const cpmItem = document.createElement('div');
+                cpmItem.className = 'history-row';
+                cpmItem.innerText = cpm;
+                cpmHistoryDiv.appendChild(cpmItem);
+            });
         }
 
         function restartOnEnter(event) {
-            if (event.key === "Enter") initializePractice();
+            if (event.key === "Enter") {
+                initializePractice();
+                document.getElementById('answer').focus();
+            }
         }
 
         function initializePractice() {
@@ -297,13 +413,20 @@
             document.getElementById('cpm-display').innerText = `CPM: 0`;
             upcomingQuestions.length = 0;
             document.getElementById('progress-bar').style.width = '100%';
-            for (let i = 0; i < 4; i++) upcomingQuestions.push(generateQuestion());
+            for (let i = 0; i < 4; i++) {
+                const nextQuestion = generateQuestion();
+                upcomingQuestions.push(nextQuestion);
+            }
             correctAnswer = upcomingQuestions[0].answer;
             document.getElementById('question').innerText = upcomingQuestions[0].question;
             updateUpcomingQuestions();
+            document.getElementById('answer').focus();
         }
 
-        document.addEventListener('DOMContentLoaded', initializePractice);
+        document.addEventListener('DOMContentLoaded', (event) => {
+            initializePractice();
+            document.getElementById('answer').focus();
+        });
     </script>
 </body>
 </html>
